--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <div class="page-header"><h1>React-MySQL Demo</h1></div>
+    <div class="page-header"><h1>React-Node</h1></div>
     <div class="page-container">
       <div id="root" class="wrapper">Loading...</div>
     </div>
